# NeedMusic

./: .gitignore  Plan.md  README.md  dynamic-island.html  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.web.ts
assets/: index-7MC2RKrh.js  index-BdRrZ5m1.js  index-CTh80SA3.js  index-CrPX7Hwn.js  index-CrwCYf5I.js  index-D9VkHZq6.js  index-DZjjKV2t.js  index-Dpuo3PSP.js  index-j1qnlTNv.js  index-pS94mgSn.js  manifest-DqVA75hr.json
dist-web/: index.html
dist-web/assets/: index-DPSdeheF.js  index-DTOvN9LX.css  manifest-D0xT5vti.json
src/: dynamic-island-main.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_eq.rs  concurrency.rs  discord_rpc.rs  lib.rs  main.rs  online.rs  scanner.rs
src/core/: AppBootstrapper.ts  index.ts
src/core/interfaces/: index.ts
src/core/models/: Album.ts  Artist.ts  Playlist.ts  Track.ts  index.ts
src/core/services/: DatabaseManager.ts  DiscordRpcService.ts  LibraryManager.ts  MediaControlBridge.ts  NativeAudioPlayer.ts  OnlineMusicService.ts  PlatformBridge.ts  PlaybackEngine.ts  WebAudioPlayer.ts  WebPlatformBridge.ts  index.ts
src/core/utils/: BackgroundEngine.ts  ColorExtractor.ts
src/ui/: App.tsx
src/ui/components/: CustomContextMenu.ts  CustomTitleBar.tsx  DynamicIsland.tsx  DynamicIslandWindow.tsx  EqSettings.tsx  HotkeySettings.tsx  Icons.tsx  LibraryScan.tsx  MarqueeText.tsx  OnlineSearchView.tsx  (+6 more)
web/: WebApp.tsx  bootstrap.ts  index.html  main.tsx
(+2 files in other folders)
