[package]
name = "needmusic"
version = "0.1.0"
description = "A high-performance desktop music player"
authors = ["NeedMusic"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "needmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
id3 = "1"
metaflac = "0.2"
mp4ameta = "0.2"
image = "0.25"
window-vibrancy = "0.5"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
rodio = { version = "0.20", features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
md5 = "0.7"
